Fix scroll location when jumping to headers

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -73,6 +73,8 @@ h3,
 h4,
 h5,
 h6 {
+    scroll-margin-top: 74px;
+
     a {
         color: inherit;
         text-decoration: none;
